# eterra-node-template

./: Cargo.toml  LICENSE  rust-toolchain.toml
.github/workflows/: check-pull-requst.yml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/ajuna-board/: Cargo.toml
pallets/ajuna-board/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs
pallets/ajuna-board/src/dot4gravity/: mod.rs  tests.rs  traits.rs
pallets/ajuna-matchmaker/: Cargo.toml
pallets/ajuna-matchmaker/src/: lib.rs  types.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
